登壇者情報の更新

--- a/index.html
+++ b/index.html
@@ -60,17 +60,23 @@
                     <article>
                         <h3>スピーカー</h3>
                         <div class="speaker">
+                            <!--TODO: プロフィール画像もらって差し替えする-->
                             <img src="images/speaker1.png" alt="" class="image"/>
                             <div class="inner">
-                                <h4>1人目: 未定</h4>
-                                <p>1人目のプロフィール</p>
+                                <h4>いろふさｎ</h4>
+                                <p>大坂出身の人</p>
+                                <p>エンジニア</p>
+                                <p>WEBやってる</p>
+
                             </div>
                         </div>
                         <div class="speaker">
                             <img src="images/speaker2.png" alt="" class="image"/>
                             <div class="inner">
-                                <h4>2人目: 未定</h4>
-                                <p>2人目のプロフィール</p>
+                                <h4>URAGAMO</h4>
+                                <p>うらがみさん</p>
+                                <p>大坂出身のプログラマー</p>
+                                <p>毎日git使ってます。ベテランです。</p>
                             </div>
                         </div>
                     </article>
